--- a/sub2actividades.html
+++ b/sub2actividades.html
@@ -72,7 +72,7 @@
       <article>
        
 
-       <p id="form2"> <b><u><center>PROBLEMAS ÉTICOS</center></u></br>
+       <p id="form2"> <h2><center>PROBLEMAS ÉTICOS</center></h2>
 
                            <figure>
                            <center><img src="img/etica.jpg" alt = "El Código de Ética para todos los usuarios de la Informática se basa en principios éticos
