--- a/sub2actividades.html
+++ b/sub2actividades.html
@@ -80,26 +80,25 @@
                            </figure>
                          
 
-                        <br>El código se centra en la esencia misma de lo que es ser un usuario de Informática.</br>
+                        El código se centra en la esencia misma de lo que es ser un usuario de Informática.<br>
 
-                        <br>Dicho código en la rama de la salud tiene dos componentes esenciales: uno, los principios que son relevantes para todo el personal que de una forma u otra tenga acceso a la información electrónica vinculada con la salud y el otro, reglas de conducta que describen las normas de comportamiento que se espera sean asumidas por todo el personal que se relaciona con la informática de la salud. Estas reglas son una ayuda para interpretar los principios en aplicaciones prácticas. Su propósito es guiar la conducta ética de todos los que de una forma u otra se involucre con la utilización de la tecnología informática al servicio de la salud.</br>
+                        Dicho código en la rama de la salud tiene dos componentes esenciales: uno, los principios que son relevantes para todo el personal que de una forma u otra tenga acceso a la información electrónica vinculada con la salud y el otro, reglas de conducta que describen las normas de comportamiento que se espera sean asumidas por todo el personal que se relaciona con la informática de la salud. Estas reglas son una ayuda para interpretar los principios en aplicaciones prácticas. Su propósito es guiar la conducta ética de todos los que de una forma u otra se involucre con la utilización de la tecnología informática al servicio de la salud.<br>
 
-                        <br>Son muchos los principios que se vinculan con la ética informática dentro de los cuales y como pilar fundamental están los principios de la ética medica sin embargo los principios en que se basa el código de ética para la informática médica son los siguientes:</br>
+                        Son muchos los principios que se vinculan con la ética informática dentro de los cuales y como pilar fundamental están los principios de la ética medica sin embargo los principios en que se basa el código de ética para la informática médica son los siguientes:<br>
 
                            · Principio de Accesibilidad. El sujeto de un registro electrónico tiene el derecho de acceder al registro y a exigir la exactitud del mismo con relación a su precisión, integridad y relevancia.<br>
 
-                           </br><u>· Principio de Privacidad y Disposición de la Información.</u> Todas las personas poseen el derecho fundamental a la privacidad y, en consecuencia, a ser informadas y ejercer el derecho de autorizar la recolección, almacenamiento, acceso, uso, comunicación, manipulación y disposición de la información sobre sí mismas.<br>
+                           <u>· Principio de Privacidad y Disposición de la Información.</u> Todas las personas poseen el derecho fundamental a la privacidad y, en consecuencia, a ser informadas y ejercer el derecho de autorizar la recolección, almacenamiento, acceso, uso, comunicación, manipulación y disposición de la información sobre sí mismas.<br>
 
-                           </br><u>· Principio de Transparencia.</u> La recolección, almacenamiento, acceso, uso, comunicación, manipulación y disposición de información personal debe ser revelado en tiempo y forma apropiados al sujeto de esos datos.<br>
+                           <u>· Principio de Transparencia.</u> La recolección, almacenamiento, acceso, uso, comunicación, manipulación y disposición de información personal debe ser revelado en tiempo y forma apropiados al sujeto de esos datos.<br>
 
-                           </br><u>· Principio de Seguridad.</u> Todas las personas tienen el derecho a que la información que ha sido legítimamente recolectada sobre sí, sea debidamente protegida, mediante todas las medidas disponibles, razonables y apropiadas tendientes a evitar pérdidas, degradación, así como la destrucción, el acceso, uso, manipulación, modificación o difusión no autorizada.<br>
+                           <u>· Principio de Seguridad.</u> Todas las personas tienen el derecho a que la información que ha sido legítimamente recolectada sobre sí, sea debidamente protegida, mediante todas las medidas disponibles, razonables y apropiadas tendientes a evitar pérdidas, degradación, así como la destrucción, el acceso, uso, manipulación, modificación o difusión no autorizada.<br>
 
-                           </br><u>· Principio de Garantía.</u> El derecho fundamental sobre el control de la recolección, el almacenamiento, acceso, uso, manipulación, comunicación y disposición de la información personal, está condicionado sólo por las necesidades legítimas, apropiadas y relevantes de información en una sociedad libre, responsable y democrática, así como por los correspondientes derechos iguales y competentes de otras personas.<br>
+                           <u>· Principio de Garantía.</u> El derecho fundamental sobre el control de la recolección, el almacenamiento, acceso, uso, manipulación, comunicación y disposición de la información personal, está condicionado sólo por las necesidades legítimas, apropiadas y relevantes de información en una sociedad libre, responsable y democrática, así como por los correspondientes derechos iguales y competentes de otras personas.<br>
 
-                           </br><u>· Principio de la alternativa menos invasora.</u> Cualquier acción legítima que deba interferir con los derechos del individuo a su privacidad o al control sobre la información relativa a ésta, deberá sólo ser efectuada de la forma menos invasora posible, tal que garantice el mínimo de interferencia a los derechos de las personas afectadas.<br>
+                           <u>· Principio de la alternativa menos invasora.</u> Cualquier acción legítima que deba interferir con los derechos del individuo a su privacidad o al control sobre la información relativa a ésta, deberá sólo ser efectuada de la forma menos invasora posible, tal que garantice el mínimo de interferencia a los derechos de las personas afectadas.<br>
 
-                           </br><u>· Principio de Responsabilidad.</u> Cualquier interferencia con los derechos de privacidad de un individuo o del derecho de tener control sobre la información relativa a su persona, debe ser justificada a tiempo y de manera apropiada ante la persona afectada..<br>
-         </b>
+                           <u>· Principio de Responsabilidad.</u> Cualquier interferencia con los derechos de privacidad de un individuo o del derecho de tener control sobre la información relativa a su persona, debe ser justificada a tiempo y de manera apropiada ante la persona afectada..<br>
         </p>
       </article>
       </header>
