--- a/sub2actividades.html
+++ b/sub2actividades.html
@@ -80,11 +80,11 @@
                            </figure>
                          
 
-                        El código se centra en la esencia misma de lo que es ser un usuario de Informática.<br>
+                        El código se centra en la esencia misma de lo que es ser un usuario de Informática.<br><br>
 
-                        Dicho código en la rama de la salud tiene dos componentes esenciales: uno, los principios que son relevantes para todo el personal que de una forma u otra tenga acceso a la información electrónica vinculada con la salud y el otro, reglas de conducta que describen las normas de comportamiento que se espera sean asumidas por todo el personal que se relaciona con la informática de la salud. Estas reglas son una ayuda para interpretar los principios en aplicaciones prácticas. Su propósito es guiar la conducta ética de todos los que de una forma u otra se involucre con la utilización de la tecnología informática al servicio de la salud.<br>
+                        Dicho código en la rama de la salud tiene dos componentes esenciales: uno, los principios que son relevantes para todo el personal que de una forma u otra tenga acceso a la información electrónica vinculada con la salud y el otro, reglas de conducta que describen las normas de comportamiento que se espera sean asumidas por todo el personal que se relaciona con la informática de la salud. Estas reglas son una ayuda para interpretar los principios en aplicaciones prácticas. Su propósito es guiar la conducta ética de todos los que de una forma u otra se involucre con la utilización de la tecnología informática al servicio de la salud.<br><br>
 
-                        Son muchos los principios que se vinculan con la ética informática dentro de los cuales y como pilar fundamental están los principios de la ética medica sin embargo los principios en que se basa el código de ética para la informática médica son los siguientes:<br>
+                        Son muchos los principios que se vinculan con la ética informática dentro de los cuales y como pilar fundamental están los principios de la ética medica sin embargo los principios en que se basa el código de ética para la informática médica son los siguientes:<br><br>
 
                            · Principio de Accesibilidad. El sujeto de un registro electrónico tiene el derecho de acceder al registro y a exigir la exactitud del mismo con relación a su precisión, integridad y relevancia.<br>
 
