--- a/lecturas.html
+++ b/lecturas.html
@@ -78,14 +78,14 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
-    <h2>Diseño de Sitios Web - UNAD ECBTI</h2>
+    <h2>LECTURAS</h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
                         <img src="img/Seguridad.jpg" alt="Seguridad">
                   	</figure>
                     <p>
-                        INTRODUCCIÓN<br>
+                        <dt> <b>INTRODUCCIÓN <dt> <b>
 <br>La seguridad informática es la encargada de diseñar las normas, procedimientos y técnicas, para asegurar la integridad, disponibilidad y privacidad de la información en un sistema informático e intentar reducir las amenazas que se pueden encontrar. 
 Encontramos dos tipos de seguridad: La seguridad lógica que se enfoca en la protección de los contenidos y su información y la seguridad física aplicada a los equipos.<br>
 <br>En la actualidad la seguridad de la información es de suma importancia para las empresas y para las personas  ya que con los avances tecnológicos han permitido el crecimiento de las vulnerabilidades de virus, hackers entre otros y con la implementación 
