--- a/sub2actividades.html
+++ b/sub2actividades.html
@@ -78,9 +78,8 @@
                            <center><img src="img/etica.jpg" alt = "El Código de Ética para todos los usuarios de la Informática se basa en principios éticos
                            fundamentales y es aplicable a situaciones que caracterizan las actividades de esta tecnología."></center>
                            </figure>
-                         
-
-                        El código se centra en la esencia misma de lo que es ser un usuario de Informática.<br><br>
+	      
+                        <P ALIGN=center>El código se centra en la esencia misma de lo que es ser un usuario de Informática.
 
                         Dicho código en la rama de la salud tiene dos componentes esenciales: uno, los principios que son relevantes para todo el personal que de una forma u otra tenga acceso a la información electrónica vinculada con la salud y el otro, reglas de conducta que describen las normas de comportamiento que se espera sean asumidas por todo el personal que se relaciona con la informática de la salud. Estas reglas son una ayuda para interpretar los principios en aplicaciones prácticas. Su propósito es guiar la conducta ética de todos los que de una forma u otra se involucre con la utilización de la tecnología informática al servicio de la salud.<br><br>
 
