--- a/sub2actividades.html
+++ b/sub2actividades.html
@@ -85,7 +85,7 @@
 
                         Son muchos los principios que se vinculan con la ética informática dentro de los cuales y como pilar fundamental están los principios de la ética medica sin embargo los principios en que se basa el código de ética para la informática médica son los siguientes:<br><br>
 
-                           · Principio de Accesibilidad. El sujeto de un registro electrónico tiene el derecho de acceder al registro y a exigir la exactitud del mismo con relación a su precisión, integridad y relevancia.<br>
+			   <u>· Principio de Accesibilidad.</u> El sujeto de un registro electrónico tiene el derecho de acceder al registro y a exigir la exactitud del mismo con relación a su precisión, integridad y relevancia.<br><br>
 
                            <u>· Principio de Privacidad y Disposición de la Información.</u> Todas las personas poseen el derecho fundamental a la privacidad y, en consecuencia, a ser informadas y ejercer el derecho de autorizar la recolección, almacenamiento, acceso, uso, comunicación, manipulación y disposición de la información sobre sí mismas.<br>
 
