--- a/lecturas.html
+++ b/lecturas.html
@@ -85,11 +85,14 @@
                         <img src="img/Seguridad.jpg" alt="Seguridad">
                   	</figure>
                     <p>
-                        <dt> <b>INTRODUCCIÓN <dt> <b>
-<br>La seguridad informática es la encargada de diseñar las normas, procedimientos y técnicas, para asegurar la integridad, disponibilidad y privacidad de la información en un sistema informático e intentar reducir las amenazas que se pueden encontrar. 
-Encontramos dos tipos de seguridad: La seguridad lógica que se enfoca en la protección de los contenidos y su información y la seguridad física aplicada a los equipos.<br>
-<br>En la actualidad la seguridad de la información es de suma importancia para las empresas y para las personas  ya que con los avances tecnológicos han permitido el crecimiento de las vulnerabilidades de virus, hackers entre otros y con la implementación 
-de un sistema de seguridad permitirá minimizar las vulnerabilidades de los sistemas y de la información contenida en ellos, así como de las redes privadas y sus recursos.<br>
+                        <dt><b>INTRODUCCION</b></dt>
+                   </p>
+			
+			<p>
+<br> La seguridad informática es la encargada de diseñar las normas, procedimientos y técnicas, para asegurar la integridad, disponibilidad y privacidad de la información en un sistema informático e intentar reducir las amenazas que se pueden encontrar. 
+Encontramos dos tipos de seguridad: La seguridad lógica que se enfoca en la protección de los contenidos y su información y la seguridad física aplicada a los equipos. <br>
+<br> En la actualidad la seguridad de la información es de suma importancia para las empresas y para las personas  ya que con los avances tecnológicos han permitido el crecimiento de las vulnerabilidades de virus, hackers entre otros y con la implementación 
+de un sistema de seguridad permitirá minimizar las vulnerabilidades de los sistemas y de la información contenida en ellos, así como de las redes privadas y sus recursos. <br>
 
                     </p>
       			</article>
