--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
                         <img src="img/Seguridad-Informatica.jpg" alt="Seguridad Informatica">
                   	</figure>
                     <p>
-                        Objetivos del curso:<br>
+			    <u>Objetivos del curso:</u><br><br>
 			    
                        En la actualidad la tecnología avanzan cada día generando más riesgo y vulnerabilidades para las grandes empresas hasta un computador personal  por lo que se requiere la 
 
 		                   implementación de niveles de seguridad que permitan mayor confiabilidad, integridad y privacidad de la información. Por lo que se capacitara al estudiante en 
 		                   los aspectos más relevantes para el desarrollo de sus habilidades para encontrar las vulnerabilidades en la infraestructura informática.<br> <br>
-			    Con este curso les permitirá a los estudiantes:<br>
+			    <u>Con este curso les permitirá a los estudiantes:</u><br><br>
 			    
-			    * Conocer el marco conceptual de la seguridad informática, sus políticas y procedimientos de gestión de riesgos ante vulnerabilidades de la infraestructura informática.<br>
+			    * Conocer el marco conceptual de la seguridad informática, sus políticas y procedimientos de gestión de riesgos ante vulnerabilidades de la infraestructura informática.<br><br>
 
-			    * Adquirirá habilidades para actuar ante los problemas que se presenten en seguridad informática planteando distintas alternativas de mejora.<br>
+			    * Adquirirá habilidades para actuar ante los problemas que se presenten en seguridad informática planteando distintas alternativas de mejora.<br><br>
 
-			    * Conocer y diferenciar entre las distintas tecnologías actuales para realizar copias de seguridad<br>
+			    * Conocer y diferenciar entre las distintas tecnologías actuales para realizar copias de seguridad<br><br>
 
-			    * Adquirirá la habilidad de reconocer las amenazas informáticas y vulnerabilidades a nivel de infraestructuras de redes.<br>
+			    * Adquirirá la habilidad de reconocer las amenazas informáticas y vulnerabilidades a nivel de infraestructuras de redes.<br><br>
                     </p>
       			</article>
     </section>
