--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@
 			    * Conocer y diferenciar entre las distintas tecnologías actuales para realizar copias de seguridad<br><br>
 
 			    * Adquirirá la habilidad de reconocer las amenazas informáticas y vulnerabilidades a nivel de infraestructuras de redes.<br><br>
-                    </p>
+                         
+			  <figure>
+                             <center><img src="img/objetivoscurso.jpg" alt = "Objetivos del curso"></center>
+                          </figure>
+			
+			</p>
       			</article>
     </section>
     <aside> 
