--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <img src="img/Seguridad-Informatica.jpg" alt="Seguridad Informatica">
                   	</figure>
                     <p>
-			    <u>Objetivos del curso:</u><br><br>
+			    <u>Objetivos del curso:ssss</u><br><br>
 			    
                        En la actualidad la tecnología avanzan cada día generando más riesgo y vulnerabilidades para las grandes empresas hasta un computador personal  por lo que se requiere la 
 
