--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
-                        <img src="img/Seguridad-Informatica.jpg" alt="Seguridad Informatica">
+                        <img src="img/seguridadinformatica.jpg" alt="Seguridad Informatica">
                   	</figure>
                     <p>
-			    <u>Objetivos del curso:ssss</u><br><br>
+			    <u>Objetivos del curso:</u><br><br>
 			    
                        En la actualidad la tecnología avanzan cada día generando más riesgo y vulnerabilidades para las grandes empresas hasta un computador personal  por lo que se requiere la 
 
