--- a/lecturas.html
+++ b/lecturas.html
@@ -19,17 +19,17 @@
                   <div id="apDiv24">OVA Para Curso Segurida Informatica  - Tecnología en Desarrollo de Software</div>
               </div>
             </header>
-        	<p>&nbsp;</p>
-   			<p>&nbsp;</p>
+            <p>&nbsp;</p>
+   	    <p>&nbsp;</p>
             <p>&nbsp;</p>
     		<nav>
                <ul class="menu">
                 <li><a href="index.html" class="menu">Inicio</a></li>
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
                 <ul>
-                    <li><a href="lec1.html" class="menu">Lectura 1</a></li>
-                    <li><a href="lec2.html" class="menu">Lectura 2</a></li>
-                    <li><a href="lec2.html" class="menu">Lectura 3</a></li>
+                    <li><a href="lectura 1.html" class="menu">Lectura 1</a></li>
+                    <li><a href="lectura 2.html" class="menu">Lectura 2</a></li>
+                    <li><a href="lectura 3.html" class="menu">Lectura 3</a></li>
                 </ul>
                 </li>
 
