--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
-                        <img src="img/seguridadinformatica.jpg" alt="Seguridad Informatica">
-                  	</figure>
+                        <center><img src="img/seguridadinformatica.jpg" alt="Seguridad Informatica"></center>
+                    </figure>
                     <p>
 			    <u>Objetivos del curso:</u><br><br>
 			    
