--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
-                        <center><img src="img/seguridadinformatica.jpg" alt="Seguridad Informatica"></center>
+                        <center><img src="img/seguridadinformatica.jpg" alt="seguridad informatica"></center>
                     </figure>
+			
                     <p>
 			    <u>Objetivos del curso:</u><br><br>
 			    
