--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			    * Adquirirá la habilidad de reconocer las amenazas informáticas y vulnerabilidades a nivel de infraestructuras de redes.<br><br>
                          
 			  <figure>
-                             <center><img src="img/objetivoscurso.jpg" alt = "Objetivos del curso"></center>
+                             <center><img src="img/objetivoscurso.jpg" alt = "objetivos del curso"></center>
                           </figure>
 			  
 			
