--- a/Principios y estandares.html
+++ b/Principios y estandares.html
@@ -27,9 +27,9 @@
                 <li><a href="index.html" class="menu">Inicio</a></li>
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
                 <ul>
-                    <li><a href="lec1.html" class="menu">Lectura 1</a></li>
-                    <li><a href="lec2.html" class="menu">Lectura 2</a></li>
-                    <li><a href="lec2.html" class="menu">Lectura 3</a></li>
+                    <li><a href="lectua 1.html" class="menu">Principios y estandares</a></li>
+                    <li><a href="lectura 2.html" class="menu">Lectura 2</a></li>
+                    <li><a href="lectura 3.html" class="menu">Lectura 3</a></li>
                 </ul>
                 </li>
 
@@ -83,7 +83,7 @@
                 <article>
                    
                     <p>
-                        <dt><b>PRINCIPIOS DE SEGURIDAD INFROMATICA</b></dt>
+                        <dt><b>PRINCIPIOS DE SEGURIDAD INFORMATICA</b></dt>
                    </p>
 			
 			<p>
