--- a/Principios y estandares.html
+++ b/Principios y estandares.html
@@ -27,7 +27,7 @@
                 <li><a href="index.html" class="menu">Inicio</a></li>
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
                 <ul>
-                    <li><a href="lectua 1.html" class="menu">Principios y estandares</a></li>
+                    <li><a href="Principios y estandares.html" class="menu">Principios y estandares</a></li>
                     <li><a href="lectura 2.html" class="menu">Lectura 2</a></li>
                     <li><a href="lectura 3.html" class="menu">Lectura 3</a></li>
                 </ul>
